--- a/admin.html
+++ b/admin.html
@@ -35,13 +35,13 @@
           <li>
             <a href="uploadevent.html" class="group flex items-center gap-3 py-2 px-3 rounded-lg hover:bg-white/10 transition">
               <svg class="w-5 h-5 opacity-90" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4"></path></svg>
-              Upload Event
+              Upload Foto
             </a>
           </li>
           <li>
             <a href="daftarevent.html" class="group flex items-center gap-3 py-2 px-3 rounded-lg hover:bg-white/10 transition">
               <svg class="w-5 h-5 opacity-90" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-              Daftar Event
+              Daftar Pelanggan
             </a>
           </li>
           <li>
@@ -92,19 +92,19 @@
             <div class="bg-blue-100 text-blue-900 rounded-xl px-4 py-3 sm:py-4 shadow text-center">
               <div class="font-bold">Paket 1</div>
               <div id="paket1-count" class="text-2xl font-extrabold">0</div>
-              <div class="text-sm">@Rp15.000</div>
+              <div class="text-sm">@Rp10.000</div>
               <div id="paket1-total" class="font-semibold mt-1">Rp0</div>
             </div>
             <div class="bg-yellow-100 text-yellow-900 rounded-xl px-4 py-3 sm:py-4 shadow text-center">
               <div class="font-bold">Paket 2</div>
               <div id="paket2-count" class="text-2xl font-extrabold">0</div>
-              <div class="text-sm">@Rp20.000</div>
+              <div class="text-sm">@Rp15.000</div>
               <div id="paket2-total" class="font-semibold mt-1">Rp0</div>
             </div>
             <div class="bg-green-100 text-green-900 rounded-xl px-4 py-3 sm:py-4 shadow text-center">
               <div class="font-bold">Paket 3</div>
               <div id="paket3-count" class="text-2xl font-extrabold">0</div>
-              <div class="text-sm">@Rp30.000</div>
+              <div class="text-sm">@Rp20.000</div>
               <div id="paket3-total" class="font-semibold mt-1">Rp0</div>
             </div>
             <div class="bg-primary text-white rounded-xl px-4 py-3 sm:py-4 shadow text-center">
@@ -115,8 +115,8 @@
         </section>
         <section class="bg-white rounded-2xl shadow-xl border border-blue-100 p-4 md:p-8">
           <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-3 mb-4">
-            <h2 class="text-2xl font-bold text-primary">Rekap Event & Pendapatan</h2>
-            <div class="text-sm text-gray-600">Data diambil dari penyimpanan lokal (demo)</div>
+            <h2 class="text-2xl font-bold text-primary">Rekap Pelanggan & Pendapatan</h2>
+            <!-- <div class="text-sm text-gray-600">Data diambil dari penyimpanan lokal (demo)</div> -->
           </div>
           <!-- Mobile cards recap -->
           <div id="recap-cards" class="grid grid-cols-1 gap-3 sm:hidden mb-4"></div>
@@ -124,7 +124,7 @@
             <table class="w-full text-left border-collapse text-sm md:text-base">
               <thead>
                 <tr>
-                  <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Event</th>
+                  <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Nama Pelanggan</th>
                   <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Email</th>
                   <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Paket</th>
                   <th class="py-2 px-3 border-b text-xs md:text-sm text-gray-600 uppercase tracking-wide">Harga</th>
@@ -192,14 +192,14 @@
         let totalFoto = 0;
         events.forEach(ev=>{ totalFoto += ev.photos.length; });
         document.getElementById('dashboard-info').innerHTML = `
-          <span class="inline-flex items-center gap-1"><svg class="w-4 h-4 text-primary" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M3 7h18M3 12h18M3 17h18"/></svg>Jumlah Event: <b>${events.length}</b></span>
+          <span class="inline-flex items-center gap-1"><svg class="w-4 h-4 text-primary" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M3 7h18M3 12h18M3 17h18"/></svg>Jumlah Pelanggan: <b>${events.length}</b></span>
           <span class="inline-flex items-center gap-1"><svg class="w-4 h-4 text-primary" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M15 10l4.553-2.276A2 2 0 0122 9.618v4.764a2 2 0 01-2.447 1.894L15 14"/><path stroke-linecap="round" stroke-linejoin="round" d="M4 6h8M4 10h8M4 14h8M4 18h8"/></svg>Total Foto: <b>${totalFoto}</b></span>
         `;
         // Paket & Pendapatan (update kartu statis)
         const paketList = [
-          {id:'paket1', harga:15000},
-          {id:'paket2', harga:20000},
-          {id:'paket3', harga:30000}
+          {id:'paket1', nama:'Paket 1', harga:10000},
+          {id:'paket2', nama:'Paket 2', harga:15000},
+          {id:'paket3', nama:'Paket 3', harga:20000}
         ];
         let totalPendapatan = 0;
         paketList.forEach(paket => {
@@ -229,7 +229,7 @@
             recapTbody.innerHTML += `
               <tr class="align-top">
                 <td class="py-3 px-3">
-                  <span class="sm:hidden block text-[11px] text-gray-500 mb-1">Event</span>
+                  <span class="sm:hidden block text-[11px] text-gray-500 mb-1">Pelanggan</span>
                   ${ev.name}
                 </td>
                 <td class="py-3 px-3 break-all">
@@ -238,7 +238,7 @@
                 </td>
                 <td class="py-3 px-3">
                   <span class="sm:hidden block text-[11px] text-gray-500 mb-1">Paket</span>
-                  ${paket ? paket.nama : '-'}
+                  ${paket ? paket.nama : (ev.paket || '-')}
                 </td>
                 <td class="py-3 px-3 whitespace-nowrap">
                   <span class="sm:hidden block text-[11px] text-gray-500 mb-1">Harga</span>
